chore: change notebook colab path

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         requestKernel: true,
         binderOptions: {
             repo: "syahrulhamdani/data-science-crisp-dm",
-            ref: "main",
+            ref: "notebooks",
         },
         codeMirrorConfig: {
             theme: "abcdef",
